{
  "version": 4,
  "terraform_version": "0.13.4",
  "serial": 121,
  "lineage": "aa317d30-d17f-165a-7171-5582e4ba19d8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:198739960305:loadbalancer/app/guardian-prod-lb/3d06ff989c6b41eb",
            "arn_suffix": "app/guardian-prod-lb/3d06ff989c6b41eb",
            "dns_name": "guardian-prod-lb-1147866239.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:198739960305:loadbalancer/app/guardian-prod-lb/3d06ff989c6b41eb",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "guardian-prod-lb",
            "security_groups": [
              "sg-02a92f10334c6f149"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-061dfa72b32cda1cf"
              },
              {
                "subnet_id": "subnet-06d6998288a38e6ef"
              }
            ],
            "subnets": [
              "subnet-061dfa72b32cda1cf",
              "subnet-06d6998288a38e6ef"
            ],
            "tags": {
              "Environment": "prod"
            },
            "vpc_id": "vpc-0f320171e68125a7d",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "lb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:198739960305:listener/app/guardian-prod-lb/3d06ff989c6b41eb/ee05c5bded4e57f0",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:198739960305:targetgroup/guardian-prod-target-group/7ce90e2febb7a225",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:198739960305:listener/app/guardian-prod-lb/3d06ff989c6b41eb/ee05c5bded4e57f0",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:198739960305:loadbalancer/app/guardian-prod-lb/3d06ff989c6b41eb",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_lb.lb",
            "aws_lb_target_group.lb_target_group",
            "aws_security_group.alb_sg",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "lb_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:198739960305:targetgroup/guardian-prod-target-group/7ce90e2febb7a225",
            "arn_suffix": "targetgroup/guardian-prod-target-group/7ce90e2febb7a225",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:198739960305:targetgroup/guardian-prod-target-group/7ce90e2febb7a225",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "guardian-prod-target-group",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0f320171e68125a7d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:198739960305:security-group/sg-02a92f10334c6f149",
            "description": "HTTP access from anywhere",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02a92f10334c6f149",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "guardian-prod-alb-sg",
            "name_prefix": null,
            "owner_id": "198739960305",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "guardian-prod-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f320171e68125a7d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "appserver_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:198739960305:security-group/sg-00d4b7b5790e8df1c",
            "description": "Allow access from load balancer sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00d4b7b5790e8df1c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02a92f10334c6f149"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "guardian-prod-application-sg",
            "name_prefix": null,
            "owner_id": "198739960305",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "guardian-prod-application-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f320171e68125a7d"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:198739960305:security-group/sg-02027a818865547b2",
            "description": "RDS security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02027a818865547b2",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00d4b7b5790e8df1c"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "guardian-prod-rds-sg",
            "name_prefix": null,
            "owner_id": "198739960305",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "guardian-prod-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f320171e68125a7d"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.appserver_sg",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:198739960305:security-group/sg-092ceb43be2a2bef0",
            "description": "SSH access from anywhere",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-092ceb43be2a2bef0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "guardian-prod-ssh-sg",
            "name_prefix": null,
            "owner_id": "198739960305",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "guardian-prod-ssh-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f320171e68125a7d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:198739960305:internet-gateway/igw-0c97f7ac3aff30b3f",
            "id": "igw-0c97f7ac3aff30b3f",
            "owner_id": "198739960305",
            "tags": {
              "Environment": "prod",
              "Name": "guardian-prod-vpc",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0f320171e68125a7d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0c97f7ac3aff30b3f",
            "id": "r-rtb-0340174783dcf33d11080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0340174783dcf33d1",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-01c93c63190101915",
            "owner_id": "198739960305",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "prod",
              "Name": "guardian-prod-vpc",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0f320171e68125a7d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0ee1504131765f739",
            "owner_id": "198739960305",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "prod",
              "Name": "guardian-prod-vpc",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0f320171e68125a7d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0340174783dcf33d1",
            "owner_id": "198739960305",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "prod",
              "Name": "guardian-prod-vpc",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0f320171e68125a7d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a15795530358f90b",
            "route_table_id": "rtb-01c93c63190101915",
            "subnet_id": "subnet-0f82069d2913e00d1"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-054e62a80db094ef7",
            "route_table_id": "rtb-0ee1504131765f739",
            "subnet_id": "subnet-0b5fc772661190e6f"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0613fbfe4449e8e47",
            "route_table_id": "rtb-0340174783dcf33d1",
            "subnet_id": "subnet-061dfa72b32cda1cf"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0102d6801847c868c",
            "route_table_id": "rtb-0340174783dcf33d1",
            "subnet_id": "subnet-06d6998288a38e6ef"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:198739960305:subnet/subnet-0f82069d2913e00d1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0f82069d2913e00d1",
            "map_public_ip_on_launch": false,
            "owner_id": "198739960305",
            "tags": {
              "Environment": "prod",
              "Name": "guardian-prod-vpc",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0f320171e68125a7d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:198739960305:subnet/subnet-0b5fc772661190e6f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0b5fc772661190e6f",
            "map_public_ip_on_launch": false,
            "owner_id": "198739960305",
            "tags": {
              "Environment": "prod",
              "Name": "guardian-prod-vpc",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0f320171e68125a7d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:198739960305:subnet/subnet-061dfa72b32cda1cf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.101.0/24",
            "id": "subnet-061dfa72b32cda1cf",
            "map_public_ip_on_launch": true,
            "owner_id": "198739960305",
            "tags": {
              "Environment": "prod",
              "Name": "guardian-prod-vpc",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0f320171e68125a7d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:198739960305:subnet/subnet-06d6998288a38e6ef",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.102.0/24",
            "id": "subnet-06d6998288a38e6ef",
            "map_public_ip_on_launch": true,
            "owner_id": "198739960305",
            "tags": {
              "Environment": "prod",
              "Name": "guardian-prod-vpc",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0f320171e68125a7d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:198739960305:vpc/vpc-0f320171e68125a7d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d0bbdc04994a8c0f",
            "default_route_table_id": "rtb-09ef0aaccc98e612f",
            "default_security_group_id": "sg-0c4e0339d67b997a7",
            "dhcp_options_id": "dopt-c496f9be",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0f320171e68125a7d",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-09ef0aaccc98e612f",
            "owner_id": "198739960305",
            "tags": {
              "Environment": "prod",
              "Name": "guardian-prod-vpc",
              "Terraform": "true"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}